# typed-uuid

./: Cargo.toml  README.md  build.sh  test-all.sh
.github/workflows/: publish.yml
src/: lib.rs
