[package]
name = "typed-uuid"
version = "0.1.0"
authors = [ "Mathias Pius <contact@pius.io>" ]
description = "Typed wrapper around Uuid to disambiguate different Ids"
keywords = ["uuid", "typed", "unique", "guid"]
license = "MIT"
edition = "2021"

[dependencies]
uuid = { version = "1" }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["v1", "v3", "v4", "v5", "serde"]
serde = ["dep:serde", "uuid/serde"]
std = ["uuid/std"]
rng = ["uuid/rng"]
v1 = ["uuid/v1"]
v3 = ["uuid/v3"]
v4 = ["uuid/v4"]
v5 = ["uuid/v5"]
# v6, v7 and v8 are unstable. See the Uuid crate documentation
# for how to enable unstable uuid versions.
v6 = ["uuid/v6"]
v7 = ["uuid/v7"]
v8 = ["uuid/v8"]

[dev-dependencies]
uuid = { version = "1", features = ["std", "rng"]}

[package.metadata."docs.rs"]
all-features = true